# A-high-performance-C--20-project-for-market-data-processing.

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  market-config.cmake
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_encode_decode.cpp  bench_gbench.cpp
codegen/: generate.py
codegen/templates/: decoder.cpp.j2  decoder.hpp.j2  encoder.cpp.j2  encoder.hpp.j2  handler.hpp.j2  json.cpp.j2  json.hpp.j2  messages.cpp.j2  messages.hpp.j2  schema.md.j2
docs/: boe_notes.md  itch_notes.md  overview.md  production.md  versioning.md
examples/: decode_boe_login.cpp  decode_itch_add.cpp  decode_itch_delete.cpp  encode_boe_login.cpp  encode_itch_add.cpp  encode_itch_delete.cpp
runtime/: bytes.hpp  config.hpp  endian.hpp  status.hpp
schemas/: cboe_boe_v3.yaml  nasdaq_itch_5.yaml
tests/: CMakeLists.txt  fuzz_decode_boe.cpp  fuzz_decode_itch.cpp  test_mt_decode.cpp  test_roundtrip.cpp
tests/fixtures/: boe_login.hex
tools/: mdp_dump.cpp
tools/pcap_decode/: pcap_decode.cpp
